kubernetes/local/minikube-virtualbox/django-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/instance: django-app-dev
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: k8s-test-django
    app.kubernetes.io/managed-by: manual
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-app
          image: django_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
